Fix: Updated the cart-items-title spacing on smaller screens

--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -90,6 +90,10 @@
   border-radius: 4px;
 }
 @media (max-width: 750px) {
+  .cart-items-title {
+    font-size: small;
+    grid-template-columns: 1fr 1.5fr 1fr 1.5fr 1fr 0.5fr;
+  }
   .cart-bottom {
     flex-direction: column-reverse;
   }
